--- a/assets/main.css
+++ b/assets/main.css
@@ -95,27 +95,28 @@ body.dark {
 button, .button {
   background: linear-gradient(white, white) padding-box,
               linear-gradient(to bottom, rgb(144, 144, 144), black) border-box;
-  border: 2px solid transparent;
+  border: 1px solid transparent;
   color:black;
   padding: 0.5rem 1rem;
   text-decoration: none;
   font-weight: bold;
   position: relative;
-  box-shadow: 0 2px 4px rgba(0,0,0,0.2);
+  box-shadow: 0 1px 4px rgba(0,0,0,0.2);
   transition: all 0.28s ease-in-out;
   border-radius: 4px;
+  cursor: pointer;
 }
 
 button:hover, .button:hover {
   background: linear-gradient(rgb(0, 0, 0), rgb(0, 0, 0)) padding-box,
   linear-gradient(to bottom, rgb(42, 42, 42), black) border-box;
-  border: 2px solid transparent;
+  border: 1px solid transparent;
   color:white;
   padding: 0.5rem 1rem;
   text-decoration: none;
   font-weight: bold;
   position: relative;
-  box-shadow: 0 2px 4px rgba(0,0,0,0.2);
+  box-shadow: 0 1px 4px rgba(0,0,0,0.2);
   font-family: 'Montserrat', sans-serif;
 }
 
@@ -125,36 +126,32 @@ button:hover, .button:hover {
     }
 
 .dark button, .dark .button {
-  box-shadow: inset 0px 4px 10px rgba(131, 36, 190, 0.1), 
-              0px 0px 10px rgba(123, 38, 130, 0.832), 
-              0px 0px 20px rgba(221, 255, 255, 0.4), 
-              inset 0px 0px 13px 4px rgba(144, 57, 173, 0.832);
-  background: linear-gradient(0deg, rgba(26, 26, 26, 1) 4%, rgba(71, 63, 94, 0.8) 100%) padding-box,
-              linear-gradient(to bottom, rgb(255, 255, 255), rgb(215, 124, 220)) border-box;
+  background: linear-gradient(black, black) padding-box,
+              linear-gradient(to bottom, rgb(255, 255, 255), rgb(159, 159, 159)) border-box;
+  border: 1px solid transparent;
+  color:white;
   border-radius: 4px;
-  border: 2px solid transparent;
+  border: 1px solid transparent;
   color:white;
   padding: 0.5rem 1rem;
   text-decoration: none;
   font-weight: bold;
   position: relative;
-  margin-top:-4px;
   font-family: 'Montserrat', sans-serif;
   transition: all 0.28s ease-in-out;
 }
 
     .dark button:hover, .dark .button:hover {
-      box-shadow: inset 0px 4px 18px rgba(131, 36, 190, 0.6), 0px 0px 18px rgba(123, 38, 130, 0.832), 0px 0px 30px rgba(221, 255, 255, 0.4), inset 0px 0px 13px 4px rgba(144, 57, 173, 0.832);
-      background: linear-gradient(0deg, rgba(131, 36, 190, 1) 4%, rgba(71, 63, 94, 0.8) 100%) padding-box,
-                  linear-gradient(to bottom, rgb(255, 255, 255), rgb(244, 198, 247)) border-box;
+      background: linear-gradient(rgb(255, 255, 255), rgb(255, 255, 255)) padding-box,
+      linear-gradient(to bottom, rgb(255, 255, 255), rgb(159, 159, 159)) border-box;
+      border: 1px solid transparent;
+      color:black;
       border-radius: 4px;
-      border: 2px solid transparent;
-      color:white;
+      border: 1px solid transparent;
       padding: 0.5rem 1rem;
       text-decoration: none;
       font-weight: bold;
       position: relative;
-      margin-top:-4px;
       font-family: 'Montserrat', sans-serif;
     }
 
