--- a/assets/main.css
+++ b/assets/main.css
@@ -86,25 +86,34 @@ body.light {
 }
 
 body.dark {
-  background-color: #000000;
+  background-color: #160B1D;
+  background: linear-gradient(180deg, #160B1D 0%, #1D1038 100%);
   color: #ffffff;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  min-height: 100vh;
 }
 
 /* Standard elements */
 
 button, .button {
   background: linear-gradient(white, white) padding-box,
-              linear-gradient(to bottom, rgb(144, 144, 144), black) border-box;
+              linear-gradient(to bottom, rgb(224, 224, 224), rgb(124, 124, 124)) border-box;
   border: 1px solid transparent;
   color:black;
   padding: 0.5rem 1rem;
   text-decoration: none;
   font-weight: bold;
   position: relative;
-  box-shadow: 0 1px 4px rgba(0,0,0,0.2);
+  box-shadow: 0 2px 1px rgba(0,0,0,0.24), 
+              0 8px 6px rgba(0,0,0,0.06),
+              0 12px 12px rgba(0,0,0,0.06);
   transition: all 0.28s ease-in-out;
   border-radius: 4px;
   cursor: pointer;
+  font-family: 'Montserrat', sans-serif;
+  transition: all 0.18s ease-in-out;
 }
 
 button:hover, .button:hover {
@@ -112,42 +121,27 @@ button:hover, .button:hover {
   linear-gradient(to bottom, rgb(42, 42, 42), black) border-box;
   border: 1px solid transparent;
   color:white;
-  padding: 0.5rem 1rem;
-  text-decoration: none;
-  font-weight: bold;
-  position: relative;
-  box-shadow: 0 1px 4px rgba(0,0,0,0.2);
-  font-family: 'Montserrat', sans-serif;
 }
 
-    button.small, .button.small {
-      padding: 0.3rem 0.8rem;
+    button.small, .button.small,
+    .dark button.small, .dark .button.small {
+      padding: 0.3rem 0.8rem !important;
       font-size: 0.8rem;
     }
 
 .dark button, .dark .button {
-  background: linear-gradient(black, black) padding-box,
+  background: linear-gradient(#4d3365, #180d25) padding-box, 
               linear-gradient(to bottom, rgb(255, 255, 255), rgb(159, 159, 159)) border-box;
   border: 1px solid transparent;
   color:white;
-  border-radius: 4px;
-  border: 1px solid transparent;
-  color:white;
-  padding: 0.5rem 1rem;
-  text-decoration: none;
-  font-weight: bold;
-  position: relative;
-  font-family: 'Montserrat', sans-serif;
-  transition: all 0.28s ease-in-out;
 }
 
     .dark button:hover, .dark .button:hover {
       background: linear-gradient(rgb(255, 255, 255), rgb(255, 255, 255)) padding-box,
-      linear-gradient(to bottom, rgb(255, 255, 255), rgb(159, 159, 159)) border-box;
+                  linear-gradient(to bottom, rgb(255, 255, 255), rgb(159, 159, 159)) border-box;
       border: 1px solid transparent;
       color:black;
       border-radius: 4px;
-      border: 1px solid transparent;
       padding: 0.5rem 1rem;
       text-decoration: none;
       font-weight: bold;
@@ -250,6 +244,12 @@ button:hover, .button:hover {
     .content img {
       margin:0 0 2rem 0;
       width: 100%;
+      border: 1px solid #00000024;
+      border-radius: 8px;
+    }
+
+    .dark .content img {
+      border: 1px solid #ffffff24;
     }
 
 .single-article h1 {
@@ -302,9 +302,9 @@ img.in-article {
 }
 
 .single-article a {
-  color: #ff53f1;
+  color: #000000;
 }
 
 .dark .single-article a {
-  color: #53ff9b;
+  color: #ffffff;
 }
