--- a/assets/main.css
+++ b/assets/main.css
@@ -31,6 +31,8 @@ a {
 h1 { 
  font-size: 3.051rem; 
  font-family: 'Montserrat', sans-serif;
+ font-weight:normal;
+ margin-bottom: 2rem;
 }
 
 h2 { 
@@ -38,6 +40,7 @@ h2 {
  font-family: 'Montserrat', sans-serif;
  margin-top:4rem;
  margin-bottom:1rem;
+ font-weight:normal;
 }
 
 h3 { 
@@ -45,6 +48,7 @@ h3 {
  font-family: 'Montserrat', sans-serif;
  margin-top:2rem;
  margin-bottom:1rem;
+ font-weight:normal;
 }
 
 h4 { 
@@ -52,6 +56,7 @@ h4 {
  font-family: 'Montserrat', sans-serif;
  margin-top:2rem;
  margin-bottom:1rem;
+ font-weight:normal;
 }
 
 h5 { 
@@ -59,6 +64,7 @@ h5 {
  font-family: 'Montserrat', sans-serif;
  margin-top:2rem;
  margin-bottom:1rem;
+ font-weight:normal;
 }
 
 p { 
@@ -96,6 +102,13 @@ body.dark {
 }
 
 /* Standard elements */
+
+input {
+  padding: 0.5rem;
+  border-radius: 4px;
+  border: 1px solid #00000024;
+  font-size: 1rem;
+}
 
 button, .button {
   background: linear-gradient(white, white) padding-box,
@@ -245,7 +258,10 @@ button:hover, .button:hover {
       margin:0 0 2rem 0;
       width: 100%;
       border: 1px solid #00000024;
-      border-radius: 8px;
+      border-radius: .3rem;
+      box-shadow: 0 2px 1px rgba(0,0,0,0.24), 
+                  0 8px 6px rgba(0,0,0,0.06),
+                  0 12px 12px rgba(0,0,0,0.06);
     }
 
     .dark .content img {
