--- a/assets/main.css
+++ b/assets/main.css
@@ -38,7 +38,7 @@ h1 {
     h1.hyper-bold {
       text-align: center;
       font-size:6dvw;
-      font-weight: bold;
+      font-weight: normal;
       margin:0;
     }
 
@@ -297,10 +297,10 @@ button:hover, .button:hover {
 
     .content img {
       margin:0 0 2rem 0;
-      width: calc(100% - 8px);
+      width: calc(100% - 20px);
       border: 1px solid #00000024;
       border-radius: .3rem;
-      padding:4px;
+      padding:10px;
       box-shadow: 0 2px 1px rgba(0,0,0,0.24), 
                   0 8px 6px rgba(0,0,0,0.06),
                   0 12px 12px rgba(0,0,0,0.06);
@@ -538,7 +538,7 @@ img.in-article {
   border:1px solid rgba(0,0,0,0.06);
   border-radius: 8px;
   padding:1rem;
-  margin:0 auto 6rem;
+  margin:2rem auto 6rem;
   width: calc(100% - 2rem);
   display:flex;
   flex-direction: row;
@@ -549,18 +549,56 @@ img.in-article {
       border:1px solid rgba(255,255,255,0.06);
     }
 
-.product-image {
-  margin:2rem 0;
-  width: calc(100% - 8px);
-  border: 1px solid #00000024;
-  border-radius: .3rem;
-  padding:4px;
-  box-shadow: 0 2px 1px rgba(0,0,0,0.24), 
-              0 8px 6px rgba(0,0,0,0.06),
-              0 12px 12px rgba(0,0,0,0.06);
+.main-product-image {
+  width:100%;
+  height:auto;
+  position: relative;
 }
 
-    .dark .product-image {
+    .main-product-image img {
+      width: 100%;
+      border-radius: .3rem;
+      position: relative;
+      z-index: 9;
+      border:0;
+      box-shadow: 0 0 20px #ff9f671f, 0 0 80px #f636b615;
+    }
+
+    .dark .main-product-image img {
+      box-shadow: 0 0 20px #ff71d0e4, 0 0 80px #f636b672;
+    }
+
+    .main-product-image::after {
+      position: absolute;
+      content: '';
+      top:0;
+      left:0;
+      right:0;
+      bottom:0;
+      z-index: 1;
+      background:red;
+      width:100%;
+      height:100%;
+      filter:blur(400px);
+      background: linear-gradient(130deg, #FF9E67 0%, #A566AF 20%, #F636B5 40%);
+      opacity: 0.15;
+    }
+
+    .dark .main-product-image::after {
+      opacity: 1;
+    }
+
+.single-product-image {
+    margin:0 0 2rem 0;
+    width: calc(100% - 8px);
+    border: 1px solid #00000010;
+    border-radius: .3rem;
+    padding:10px;
+    box-shadow: 0 1px 1px rgba(0,0,0,0.04), 
+                0 12px 12px rgba(0,0,0,0.06);
+}
+
+    .dark .single-product-image {
       border: 1px solid #ffffff24;
     }
 
