--- a/assets/main.css
+++ b/assets/main.css
@@ -40,6 +40,7 @@ h1 {
       font-size:6dvw;
       font-weight: normal;
       margin:0;
+      line-height: 5dvw;
     }
 
 h2 { 
@@ -526,6 +527,15 @@ img.in-article {
     .product-logo {
       width:140px;
       margin:0 auto;
+      mix-blend-mode: darken;
+    }
+
+    .dark .product-logo {
+      mix-blend-mode: lighten;
+    }
+
+    .dark .product-logo.invert {
+      filter:invert();
     }
 
     .product-content h2,
@@ -566,8 +576,9 @@ img.in-article {
   border-radius: 10px;
 }
 
-    .main-product-image img {
-      width: 100%;
+    .main-product-image img,
+    .main-product-image video {
+      width: calc(100% - 20px);
       border-radius: .3rem;
       position: relative;
       z-index: 9;
@@ -575,7 +586,8 @@ img.in-article {
       box-shadow: 0 0 20px #ff9f671f, 0 0 80px #f636b615;
     }
 
-    .dark .main-product-image img {
+    .dark .main-product-image img,
+    .dark .main-product-image video {
       box-shadow: 0 0 20px #ff71d0e4, 0 0 80px #f636b672;
     }
 
@@ -593,6 +605,10 @@ img.in-article {
       filter:blur(400px);
       background: linear-gradient(130deg, #FF9E67 0%, #A566AF 20%, #F636B5 40%);
       opacity: 0.15;
+    }
+
+    .main-product-image.sammitch::after {
+      background: linear-gradient(130deg, #3E9C13 0%, #A566AF 20%, #7844AA 40%);
     }
 
     .dark .main-product-image::after {
@@ -652,6 +668,20 @@ img.in-article {
   opacity: 0.6;
 }
 
+.story-time .codehighlight {
+  font-size:0.8rem;
+  opacity: 1;
+  background-color: #00000037;
+  padding: 0.1rem 0.3rem;
+  border-radius: 4px;
+  border:1px solid #00000037;
+}
+
+.dark .story-time .codehighlight {
+  background-color: #ffffff37;
+  border:1px solid #ffffff37;
+}
+
 .features {
   display:grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
@@ -684,3 +714,14 @@ img.in-article {
           font-size:0.7rem;
           margin:0;
         }
+
+    .single-feature-image {
+      display:flex;
+      flex-direction:row;
+      margin:2rem auto;
+    }
+
+    .single-feature-image img {
+      width: 100%;
+      padding:1rem;
+    }
