--- a/assets/main.css
+++ b/assets/main.css
@@ -44,6 +44,14 @@ h1 {
       z-index: 11;
     }
 
+    @media screen and (max-width: 768px) {
+      h1.hyper-bold {
+        font-size:12vw;
+        line-height: 11vw;
+      }
+      
+    }
+
 h2 { 
  font-size: 2.441rem; 
  font-family: 'Montserrat', sans-serif;
